[package]
name = "serde-value"
version = "0.8.0"
authors = ["arcnmx"]
edition = "2018"

description = "Serialization value trees"
documentation = "https://docs.rs/serde-value/*/serde_value/"
repository = "https://github.com/arcnmx/serde-value"
readme = "README.md"
keywords = ["serde"]
license = "MIT"

[dependencies]
serde = { version = "^1.0.0", features = ["alloc"], default-features = false}
ordered-float = { version = "^5.3.0", default-features = false, features = ["serde"] }

[dev-dependencies]
serde_derive = "^1.0.0"
